--- a/HotelDishManagement/HotelDishManagement/HotelDishManagement.csproj
+++ b/HotelDishManagement/HotelDishManagement/HotelDishManagement.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
     <PackageReference Include="System.Data.SQLite.x64" Version="1.0.119" />
